manifest/overlays/local/ingress/traefik-dashboard.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard
  namespace: infra
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/service.name: api@internal
    traefik.ingress.kubernetes.io/service.port: '8080'
spec:
  rules:
    - host: traefik.127.0.0.1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik
                port:
                  number: 8080
