manifest/overlays/local/ingress/unleash.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unleash
  namespace: infra
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: unleash.127.0.0.1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: unleash
                port:
                  number: 4242
